fix(print): legend will no longer cut off if text is too long in print mode

--- a/src/styles/tink-gis-angular.scss
+++ b/src/styles/tink-gis-angular.scss
@@ -1042,6 +1042,9 @@ html.print {
   .layer-management {
     display: none;
   }
+  #rightaside{
+    width: fit-content;
+  }
 
  /**
  * Aanpassingen Matthiass
